Fixing about cards on mobile view

--- a/src/components/partials/about/about.css
+++ b/src/components/partials/about/about.css
@@ -95,7 +95,7 @@
   }
 
   .about__cards {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
     gap: 1rem;
   }
 
